<resources>
    <string name="app_name">CambioDePeso</string>
    <string name="txtPeso">Peso</string>
    <string name="txtConvierte">Calcular peso en:</string>
    <string name="btnLuna">Luna</string>
    <string name="txtPesoLuna">Tu peso en la Luna es:</string>
    <string name="btnJupiter">Jupiter</string>
    <string name="txtPesoJupiter">Tu peso en Jupiter es:</string>
    <string name="btnSaturno">Saturno</string>
    <string name="txtPesoSaturno">Tu peso en Saturno es:</string>
    <string name="btnRegresa">Regresar</string>
    <string name="urano">Urano</string>
    <string name="ceros">0.0</string>
    <string name="marte">marte</string>
    <string name="pesoMarte">pesoMarte</string>
    <string name="titleTitan">Titán</string>
    <string name="tu_peso_en_titan_es">Tu peso en titan es</string>
    <string name="titan">titan</string>
</resources>
